--- a/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
@@ -60,6 +60,9 @@
     .not_tested {
       background-color: rgb(192, 192, 192);
     }
+    .failed_check_summary {
+      font-style: italic;
+    }
   </style>
   {{ explorer_header() }}
 </head>
@@ -128,6 +131,17 @@
                     <a href="{{ event.failed_check.documentation_url }}">{{ event.failed_check.name }}</a>
                   {% else %}
                     {{ event.failed_check.name }}
+                  {% endif %}
+                  {% if event.query_events %}
+                    <sup>[{{ event.get_query_links() }}]</sup>
+                  {% endif %}
+                  {% if event.failed_check.summary %}
+                    <br>
+                    <span class="failed_check_summary">{{ event.failed_check.summary }}</span>
+                  {% endif %}
+                  {% if event.failed_check.details %}
+                    <br>
+                    <span class="failed_check_details">{{ event.failed_check.details.replace("\n", "<br>") }}</span>
                   {% endif %}
                 </td>
                 {% for participant_id in all_participants %}
