Use unattributed participant constant in templates

--- a/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
@@ -157,7 +157,7 @@
       <th>Scenario</th>
       {% for participant_id in all_participants %}
         <th>
-          {% if participant_id != "unattributed" %}
+          {% if participant_id != UNATTRIBUTED_PARTICIPANT %}
             {{ participant_id }}
           {% else %}
             &lt;None&gt;
