--- a/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
@@ -82,7 +82,7 @@
       <th colspan="3">Event</th>
       {% for participant_id in all_participants %}
         <th>
-          {% if participant_id != "unattributed" %}
+          {% if participant_id != UNATTRIBUTED_PARTICIPANT %}
             {{ participant_id }}
           {% else %}
             &lt;None&gt;
@@ -124,7 +124,7 @@
                   {{ event.passed_check.name }}
                 </td>
                 {% for participant_id in all_participants %}
-                  {% if (participant_id != "unattributed" and participant_id in event.passed_check.participants) or (participant_id == "unattributed" and not event.passed_check.participants) %}
+                  {% if (participant_id != UNATTRIBUTED_PARTICIPANT and participant_id in event.passed_check.participants) or (participant_id == UNATTRIBUTED_PARTICIPANT and not event.passed_check.participants) %}
                     <td class="pass_result">&#x2705;</td>
                   {% else %}
                     <td></td>
@@ -151,7 +151,7 @@
                   {% endif %}
                 </td>
                 {% for participant_id in all_participants %}
-                  {% if (participant_id != "unattributed" and participant_id in event.failed_check.participants) or (participant_id == "unattributed" and not event.failed_check.participants) %}
+                  {% if (participant_id != UNATTRIBUTED_PARTICIPANT and participant_id in event.failed_check.participants) or (participant_id == UNATTRIBUTED_PARTICIPANT and not event.failed_check.participants) %}
                     <td class="fail_result">&#x274C;</td>
                   {% else %}
                     <td></td>
@@ -166,7 +166,7 @@
                   {% set collapsible.queries = collapsible.queries + [query_id] %}
                 </td>
                 {% for participant_id in all_participants %}
-                  {% if (participant_id != "unattributed" and participant_id == event.query.get("server_id", None)) or (participant_id == "unattributed" and not event.query.get("server_id", None)) %}
+                  {% if (participant_id != UNATTRIBUTED_PARTICIPANT and participant_id == event.query.get("server_id", None)) or (participant_id == UNATTRIBUTED_PARTICIPANT and not event.query.get("server_id", None)) %}
                     <td>&#x1F310;</td>
                   {% else %}
                     <td></td>
