--- a/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
@@ -124,7 +124,7 @@
         {% set current = namespace(address="v1.test_run.resources.resource_declarations") %}
         {% for resource_id, resource_dec in report.configuration.resources.resource_declarations.items() %}
           {% set current.address = current.address + "." + resource_id %}
-          {% if (current.address in report.configuration.non_baseline_inputs) != is_baseline %}
+          {% if ("non_baseline_inputs" in report.configuration and report.configuration.non_baseline_inputs and (current.address in report.configuration.non_baseline_inputs) != is_baseline) or (("non_baseline_inputs" not in report.configuration or not report.configuration.non_baseline_inputs) and is_baseline) %}
             <li id="resource_{{ resource_id }}"><code>{{ resource_id }}</code> ({{ resource_dec.resource_type }})
               <ul>
                 {% if resource_dec.dependencies %}
@@ -156,8 +156,15 @@
       {% endif %}
       <th>Scenario</th>
       {% for participant_id in all_participants %}
-        <th>{{ participant_id }}</th>
+        <th>
+          {% if participant_id != UNATTRIBUTED_PARTICIPANT %}
+            {{ participant_id }}
+          {% else %}
+            &lt;None&gt;
+          {% endif %}
+        </th>
       {% endfor %}
+      <th>Time</th>
     </tr>
     {% for row in overview_rows %}
       <tr>
@@ -185,13 +192,22 @@
           {% if row.scenario_node and participant_id in row.scenario_node.scenario.participants %}
             {% if row.scenario_node.scenario.participants[participant_id].has_failures %}
               <td class="fail_result">&#x274C;</td>
-            {% else %}
+            {% elif row.scenario_node.scenario.participants[participant_id].has_successes %}
               <td class="pass_result">&#x2705;</td>
+            {% elif row.scenario_node.scenario.participants[participant_id].has_queries %}
+              <td>&#x1F310;</td>
+            {% else %}
+              <td>???</td>
             {% endif %}
           {% else %}
             <td></td>
           {% endif %}
         {% endfor %}
+        <td>
+          {% if row.scenario_node %}
+            {{ row.scenario_node.scenario.duration }}
+          {% endif %}
+        </td>
       </tr>
     {% endfor %}
   </table>
