--- a/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
@@ -146,7 +146,7 @@
                   {% set collapsible.queries = collapsible.queries + [query_id] %}
                 </td>
                 {% for participant_id in all_participants %}
-                  {% if participant_id == event.query.get("server_id", None) %}
+                  {% if participant_id == event.query.get("participant_id", None) %}
                     <td>&#x1F310;</td>
                   {% else %}
                     <td></td>
