[uss_qualifier/netrid] Fix #244; rename server_id to participant_id; some refactorings and fixes (#247)
* [uss_qualifier] attach participant id to net0210 check, fix Issue #244

* rename server_id -> participant_id

* factor out polling; refactor some parts of scenarios

* add aud override in NoAuth

* fix participant_id setter

* fix several issues

* fix small issues

* add TODO

---------

Co-authored-by: Mickaël Misbach <mickael@misba.ch>
Co-authored-by: Mickaël Misbach <mickael.misbach@orbitalize.com>

--- a/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
@@ -166,7 +166,7 @@
                   {% set collapsible.queries = collapsible.queries + [query_id] %}
                 </td>
                 {% for participant_id in all_participants %}
-                  {% if (participant_id != UNATTRIBUTED_PARTICIPANT and participant_id == event.query.get("server_id", None)) or (participant_id == UNATTRIBUTED_PARTICIPANT and not event.query.get("server_id", None)) %}
+                  {% if (participant_id != UNATTRIBUTED_PARTICIPANT and participant_id == event.query.get("participant_id", None)) or (participant_id == UNATTRIBUTED_PARTICIPANT and not event.query.get("participant_id", None)) %}
                     <td>&#x1F310;</td>
                   {% else %}
                     <td></td>
