--- a/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
@@ -46,6 +46,10 @@
     h2 {
       margin-block-end: 0.1em;
     }
+    p {
+      margin-top: 0.1em;
+      margin-bottom: 0.1em;
+    }
     .sticky_cell_value {
       position: sticky;
       top: 40px;
