--- a/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
@@ -3,71 +3,7 @@
 <html lang="en">
 <head>
   <title>TR-{{ test_run.test_run_id[0:7] }} sequence view</title>
-  <style>
-    body {
-      margin: 0;
-      color: #24292f;
-      background-color: #ffffff;
-      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-      font-size: 16px;
-      line-height: 1.5;
-      word-wrap: break-word;
-    }
-    table {
-      border-spacing: 0;
-      border-collapse: collapse;
-      width: max-content;
-      max-width: 100%;
-      overflow: auto;
-    }
-    tr {
-      border-top: 1px solid hsla(210,18%,87%,1);
-    }
-    table tr:nth-child(2n) {
-      background-color: #f6f8fa;
-    }
-    td {
-      padding: 6px 6px;
-      vertical-align: top;
-      border: 1px solid #d0d7de;
-    }
-    th {
-      padding: 6px 6px;
-      text-align: left;
-      background-color: rgb(230, 230, 230);
-      border: 1px solid #d0d7de;
-      height: 40px;
-    }
-    a {
-      background-color: transparent;
-      color: #0969da;
-      text-decoration: none;
-    }
-    h2 {
-      margin-block-end: 0.1em;
-    }
-    p {
-      margin-top: 0.1em;
-      margin-bottom: 0.1em;
-    }
-    .sticky_cell_value {
-      position: sticky;
-      top: 40px;
-      z-index: 0;
-    }
-    .pass_result {
-      background-color: rgb(192, 255, 192);
-    }
-    .fail_result {
-      background-color: rgb(255, 192, 192);
-    }
-    .not_tested {
-      background-color: rgb(192, 192, 192);
-    }
-    .skipped_explanation {
-      font-style: italic;
-    }
-  </style>
+  {% include "sequence_view/style.html" %}
   {{ explorer_header() }}
 </head>
 <body>
@@ -200,6 +136,8 @@
           {% if row.scenario_node and participant_id in row.scenario_node.scenario.participants %}
             {% if row.scenario_node.scenario.participants[participant_id].has_failures %}
               <td class="fail_result">&#x274C;</td>
+            {% elif row.scenario_node.scenario.participants[participant_id].has_infos %}
+              <td class="info_result">&#8505;&#65039;</td>
             {% elif row.scenario_node.scenario.participants[participant_id].has_successes %}
               <td class="pass_result">&#x2705;</td>
             {% elif row.scenario_node.scenario.participants[participant_id].has_queries %}
