Generate KML visualizations for scenarios in sequence view artifact

--- a/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/scenario.html
@@ -17,6 +17,11 @@
     <h2>{{ test_scenario.name }}</h2>
   {% endif %}
   <h3>{{ test_scenario.type }}</h3>
+  {% if kml_file %}
+    <h4>
+      <a href="{{ kml_file }}">KML visualization</a>
+    </h4>
+  {% endif %}
   <table>
     <tr class="header_row">
       <th>Case</th>
