Number scenarios in index

--- a/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
@@ -107,7 +107,7 @@
           {% else %}
             <td>
           {% endif %}
-              <a href="s{{ row.scenario_node.scenario.scenario_index }}.html">{{ row.scenario_node.scenario.name }}</a>
+              {{ row.scenario_node.scenario.scenario_index }}) <a href="s{{ row.scenario_node.scenario.scenario_index }}.html">{{ row.scenario_node.scenario.name }}</a>
             </td>
         {% endif %}
         {% if row.skipped_action_node %}
