Show codebase version that generated artifacts

--- a/monitoring/uss_qualifier/reports/templates/sequence_view/style.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/style.html
@@ -68,5 +68,9 @@
   .failed_check_summary {
     font-style: italic;
   }
+  .minor_note {
+    font-style: italic;
+    font-size: 10px;
+  }
 </style>
 
