Add resource origin information and display it in sequence view

--- a/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
+++ b/monitoring/uss_qualifier/reports/templates/sequence_view/overview.html
@@ -57,7 +57,7 @@
 </div>
 
 <div id="resources_configuration_section" class="collapseable">
-  <div class="node_key" onclick="showHide(document.getElementById('resources_configuration_section'))"><h2>Resources configuration</h2></div>
+  <div class="node_key" onclick="showHide(document.getElementById('resources_configuration_section'))"><h2><a id="resources-configuration">Resources configuration</a></h2></div>
   <div class="node_value">
     {{ explorer_content("resources_configuration_tree", resources_config) }}
     {% set collapsible.queries = collapsible.queries + ["resources_configuration_tree"] %}
